# prem

./: LICENSE.md  README.md  flake.nix  requirements.compiled  requirements.txt  setup.cfg
prem/: PDF.py  __init__.py  logger.py  logging.py  source.py  utils.py
prem/sources/: CrossRef.py  arXiv.py
ptdpy/: PDF.py  __init__.py  source.py  utils.py
tests/: test_cases.py  test_crossref.py  test_pdf.py  test_utils.py
tests/helpers/: utils.py
