[metadata]
name = prem
author = Jayghosh Rao
author_email = jayghoshter@gmail.com
description = PDF reference manager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license=GPLv3
platform=posix

[options]
packages = find:
python_requires = >=3.8
install_requires =
    rich>10.15
scripts = bin/prem
