[metadata]
name = prem
author = Jayghosh Rao
author_email = jayghoshter@gmail.com
description = PDF reference manager
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Development Status :: 3 - Alpha
license=MIT
platform=posix

[options]
packages = find:
python_requires = >=3.8
install_requires =
    click
    joblib
    pdfplumber
    pdfrw
    pikepdf>=7.1.0
    plumbum
    pyfzf
    requests
    rich
scripts = bin/prem
